--- a/styles/instructor.css
+++ b/styles/instructor.css
@@ -21,11 +21,13 @@ header {
 
 .operations {
   display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
   margin-bottom: 50px;
   width: 40%;
+  position: relative;
+}
+
+.chakra-tabs__tab-panels {
+  position: absolute;
 }
 
 .operations__item {
@@ -62,9 +64,9 @@ header {
   color: #f7c531;
 }
 
-.container {
+.instructor-container {
   width: 100%;
-  height: 100%;
+  height: 86vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -73,7 +75,6 @@ header {
 
 .profile {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -136,6 +137,8 @@ header {
   font-size: 2.4rem;
   color: #f7c531;
   margin-bottom: 2rem;
+  display: flex;
+  flex-direction: row;
 }
 
 .about-content-profile {
@@ -147,4 +150,8 @@ header {
 .about-student {
   font-size: 1.6rem;
   font-weight: 500;
+}
+
+.chakra-tabs__tablist button {
+  font-size: 2rem;
 }
