--- a/styles/instructor_course.css
+++ b/styles/instructor_course.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -192,4 +192,4 @@ header {
 .food-author {
   font-size: 1.6rem;
   font-weight: 300;
-}
+} */
