--- a/styles/instructor_review.css
+++ b/styles/instructor_review.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -187,4 +187,4 @@ header {
   font-weight: 500;
   color: #272042;
   line-height: 20px;
-}
+} */
