--- a/styles/instructor.css
+++ b/styles/instructor.css
@@ -69,8 +69,9 @@ header {
   height: 86vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  margin: 2rem;
 }
 
 .profile {
