--- a/styles/detail.css
+++ b/styles/detail.css
@@ -1,5 +1,5 @@
 .detail-header {
-  width: 800px;
+  width: 60%;
   margin: 100px auto;
   text-align: center;
   font-size: 20px;
@@ -7,13 +7,13 @@
 
 .detail-header .item-name {
   font-size: 36px;
+  font-weight: bold;
   margin-bottom: 10px;
 }
 
 .detail-header .item-author {
   color: #8b8ba5;
   margin-bottom: 30px;
-  font-weight: 400;
 }
 
 .detail-header .item-review {
@@ -25,21 +25,26 @@
   width: 100%;
 }
 
+
+
+
 .detail-content {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  /* gap: 16px; */
-  margin: 0 170px;
+  grid-template-columns: 2fr 1fr;
+  gap: 100px;
+  margin: auto;
+  width: 80%;
 }
 
-.detail-content .detail-information {
-  width: 600px;
-}
-
-h3 {
+.detail-container h3 {
   font-weight: 600;
   font-size: 22px;
   margin: 50px 0 20px;
+}
+
+.detail-container h4 {
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .detail-information p {
@@ -70,13 +75,12 @@ h3 {
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 20px;
-  /* font-size: 20px; */
   margin-bottom: 25px;
 }
 
 .detail-review .item-review .review-account img {
-  width: 90px;
-  height: 90px;
+  width: 70px;
+  height: 70px;
   object-fit: cover;
   object-position: center;
   border-radius: 100%;
@@ -92,15 +96,12 @@ h3 {
   font-size: 18px;
 }
 
-.detail-content .detail-transaction {
-  width: 250px;
-  margin-right: auto;
-}
 
 .detail-transaction .price {
   font-weight: 700;
   font-size: 36px;
 }
+
 
 .detail-transaction .label {
   font-weight: 400;
@@ -110,11 +111,12 @@ h3 {
 }
 
 .detail-transaction button {
-  width: 250px;
+  width: 100%;
   height: 50px;
   background: #f7c531;
   padding: 16px 0;
   font-weight: bold;
+  margin-bottom: 16px;
   cursor: pointer;
   color: black;
   text-align: center;
@@ -125,6 +127,7 @@ h3 {
 .detail-transaction button:hover {
   background-color: #ffa500;
 }
+
 .transaction-additional .additional-item {
   list-style: none;
   display: grid;
@@ -158,4 +161,4 @@ h3 {
   width: 100% !important;
   position: relative !important;
   height: unset !important;
-}
+} 
