--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,6 +1,8 @@
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1000px) {
     .detail-content {
-        grid-template-columns: 1fr;
+        display: flex;
+        flex-direction: column-reverse;
+
     }
 
     .detail-content .detail-transaction {
@@ -8,29 +10,33 @@
         grid-template-columns: 1fr;
         width: 100%;
     }
-    .detail-content .detail-information {
-        width: 100%;
+    .detail-transaction form{
+        text-align: end;
     }
 
     .transaction-additional{
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 16px;
-        /* background-color: red; */
+    } 
+    .detail-button {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
     }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 800px) {
+    .transaction-additional{
+        grid-template-columns: repeat(3, 1fr);
+    } 
+}
+@media screen and (max-width: 700px) {
     .detail-header {
-        width: 600px;
-    }
-    .detail-content .detail-transaction {
-        grid-template-columns: 1fr;
+        width: 90%;
     }
 
-    
-
-    /* .detail-information .detail-galery {
+    .transaction-additional{
         grid-template-columns: repeat(2, 1fr);
-    } */
+    } 
 }
