--- a/styles/instructor.css
+++ b/styles/instructor.css
@@ -156,3 +156,73 @@ header {
 .chakra-tabs__tablist button {
   font-size: 2rem;
 }
+
+.content-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 4rem;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.card-content__image {
+  height: 100%;
+  object-fit: cover;
+  position: relative;
+}
+
+.card-content__image::before {
+  z-index: -2;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 190px;
+  height: 190px;
+  background-color: #d8cbf6;
+  border-radius: 40px 60px 60px 60px;
+}
+
+.card-content__image::after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 189px;
+  height: 184px;
+  background-color: #fdfae5;
+  border-radius: 65px 65px 65px 65px;
+}
+
+.card-content__image img {
+  width: 180px;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 80px 65px 65px 65px;
+}
+
+.card-content__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.food-name {
+  font-size: 2.2rem;
+  font-weight: 500;
+}
+
+.food-author {
+  font-size: 1.6rem;
+  font-weight: 300;
+}
