--- a/styles/register.css
+++ b/styles/register.css
@@ -14,7 +14,8 @@
   align-items: center;
 }
 
-.register h1 {
+.register h1,
+.login-container h1 {
   font-size: 46px;
   font-weight: 700px;
   color: #272042;
