Create dynamic detail page

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,45 +1,44 @@
-/* @media screen and (max-width: 1000px) {
-    .detail-content {
-        display: flex;
-        flex-direction: column-reverse;
+@media screen and (max-width: 1000px) {
+  .detail-content {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 
-    }
+  .detail-content .detail-transaction {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+  .detail-transaction form {
+    text-align: end;
+  }
 
-    .detail-content .detail-transaction {
-        display: grid;
-        grid-template-columns: 1fr;
-        width: 100%;
-    }
-    .detail-transaction form{
-        text-align: end;
-    }
-
-    .transaction-additional{
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 16px;
-    } 
-    .detail-button {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
-    }
+  .transaction-additional {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 16px;
+  }
+  .detail-button {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
 }
 
 @media screen and (max-width: 800px) {
-    .transaction-additional{
-        grid-template-columns: repeat(3, 1fr);
-    } 
+  .transaction-additional {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 @media screen and (max-width: 700px) {
-    .detail-header {
-        width: 90%;
-    }
+  .detail-header {
+    width: 90%;
+  }
 
-    .transaction-additional{
-        grid-template-columns: repeat(2, 1fr);
-    } 
-} */
+  .transaction-additional {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 
 @media (max-width: 84em) {
   .content-container {
