--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,16 +2,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-  overflow-x: hidden;
+  font-family: 'Quicksand', sans-serif;
 }
 
 body {
-  font-family: 'Quicksand', sans-serif;
   line-height: 1.6;
   color: #333;
-  padding: 100px 145px;
+  padding: 0.4rem 0.2rem;
 }
