--- a/styles/landingpage.css
+++ b/styles/landingpage.css
@@ -3,6 +3,34 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  height: 70vh;
+  flex-direction: column;
+}
+
+.sponsor_section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.landing_section-content {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.landing_section-sponsor {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  width: 100%;
+  height: 30vh;
+}
+
+.landing_section-sponsor img {
+  filter: grayscale(90%);
+  height: 20%;
 }
 
 .landing_information {
@@ -61,8 +89,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-
-  margin-top: 100px;
 }
 
 .featured_description {
