--- a/styles/landingpage.css
+++ b/styles/landingpage.css
@@ -15,8 +15,10 @@
 }
 
 .landing_section-content {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  gap: 2rem;
 }
 
 .landing_section-sponsor {
@@ -25,7 +27,7 @@
   justify-content: space-evenly;
   align-items: flex-start;
   width: 100%;
-  height: 30vh;
+  height: 10rem;
 }
 
 .landing_section-sponsor img {
@@ -34,7 +36,6 @@
 }
 
 .landing_information {
-  width: 27%;
   display: flex;
   flex-direction: column;
   justify-content: center;
