--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -31,6 +31,10 @@
 
 /* Tablet */
 @media (max-width: 75em) {
+  .landing_section {
+    height: 90vh;
+    align-items: center;
+  }
   .searchBar {
     width: 0;
   }
@@ -48,7 +52,7 @@
 
   .testimoni_text {
     font-size: 1.6rem;
-    width: 100%;
+    width: 80%;
   }
 }
 
