--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -221,7 +221,8 @@ button {
 
 .footer-title {
   color: black;
-  line-height: 4rem;
+  line-height: 2rem;
+  font-weight: 600;
 }
 
 .footer-list {
