--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -64,6 +64,10 @@
   .explore-description {
     font-size: 100%;
   }
+
+  .login-container{
+    align-items: center;
+  }
 }
 
 @media (max-width: 59em) {
@@ -110,5 +114,14 @@
   .detail-galery,
   .transaction-additional {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .login-container{
+    display: block;
+    align-items: center;
+  }
+  .form-group{
+    margin-top: 30%;
+   
   }
 }
