change styling for explore

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -24,7 +24,7 @@
   }
   .content-container,
   .item_list {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(5, 1fr);
   }
 }
 
@@ -39,7 +39,7 @@
   }
   .content-container,
   .item_list {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
   .transaction-additional {
     grid-template-columns: repeat(3, 1fr);
@@ -65,14 +65,17 @@
     font-size: 100%;
   }
 
-  .login-container{
+  .login-container {
     align-items: center;
   }
 }
 
 @media (max-width: 59em) {
   .content-container,
-  .item_list,
+  .item_list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
   .footer-content {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -116,12 +119,25 @@
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .login-container{
+  .login-container {
     display: block;
     align-items: center;
   }
-  .form-group{
+  .form-group {
     margin-top: 30%;
-   
+  }
+}
+
+@media (max-width: 40em) {
+  .content-container,
+  .item_list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 30em) {
+  .content-container,
+  .item_list {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
