--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -123,8 +123,9 @@
     display: block;
     align-items: center;
   }
-  .form-group {
-    margin-top: 30%;
+  .form {
+    margin-top: 0;
+    align-items: center;
   }
 }
 
