change member/detail/plant style

--- a/styles/member-page-styles/plant.css
+++ b/styles/member-page-styles/plant.css
@@ -1,51 +1,64 @@
 .member-plant-header {
-    display: flex;
-    gap: 16px;
-    background: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px 24px;
-    margin-top: 8px;
-    margin-bottom: 24px;
-    border-radius: 8px;
+  display: flex;
+  gap: 16px;
+  background: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px 24px;
+  margin-top: 8px;
+  margin-bottom: 24px;
+  border-radius: 8px;
+  align-items: center;
 }
 
 .member-plant-header > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: column;
 }
 
 .member-plant-title {
-    font-weight: 700;
-    font-size: 44px;
+  font-weight: 700;
+  font-size: 44px;
 }
 
 .member-plant-type {
-    display: flex;
+  display: flex;
 }
 
 .member-plant-type > p {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
 .member-plant-tags {
-    display: flex;
+  display: flex;
 }
 
 .member-plant-tags > p {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
 .member-progress {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .member-progress > p {
-    font-weight: 600;
-    font-size: larger;
+  font-weight: 600;
+  font-size: larger;
 }
 
 .member-accordion-panel {
-    display: flex;
-    gap: 8px;
+  display: flex;
+  gap: 8px;
+  flex-direction: column;
+}
+
+@media (max-width: 40em) {
+  .member-plant-header {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .member-plant-header div {
+    width: 100%;
+  }
 }
