--- a/styles/instructor.css
+++ b/styles/instructor.css
@@ -5,12 +5,14 @@ header {
 .operations {
   display: flex;
   margin-bottom: 50px;
-  width: 40%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
   position: relative;
 }
 
-.chakra-tabs__tab-panels {
-  position: absolute;
+.chakra-tabs__tab-panels .css-8atqhb {
+  width: 100vh;
 }
 
 .operations__item {
@@ -48,7 +50,6 @@ header {
 }
 
 .instructor-container {
-  width: 100%;
   height: 86vh;
   display: flex;
   flex-direction: column;
@@ -83,8 +84,17 @@ header {
   border-radius: 50%;
 }
 
+.chakra-tabs__tab-panel:nth-child(1) {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.chakra-tabs__tab-panel {
+  display: flex;
+  justify-content: center;
+}
+
 .profile-info {
-  margin-top: 2.6rem;
   margin-bottom: 5rem;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -92,13 +102,8 @@ header {
 }
 
 .profile-info h1 {
-  font-size: 3.6rem;
   font-weight: 400;
   margin-bottom: 0;
-}
-
-.profile-info p {
-  font-size: 2rem;
 }
 
 .profile-image img {
@@ -134,10 +139,6 @@ header {
 .about-student {
   font-size: 1.6rem;
   font-weight: 500;
-}
-
-.chakra-tabs__tablist button {
-  font-size: 2rem;
 }
 
 .content-container {
